# earthchem-pyclient

./: pyproject.toml
earthchem/: documentation.py  formatting.py  query.py  validation.py
earthchem/plot/: density.py  spider.py  ternary.py
earthchem/resources/: earthchem_rest_search_documentation.html
examples/: plotting.ipynb  rest_queries.ipynb
tests/: test_earthchem.py
