[tool.poetry]
name = "earthchem"
version = "0.1.0"
description = ""
authors = ["Paula Antoshechkina <psmith@gps.caltech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.13.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
tqdm = "^4.65.0"
python-ternary = "^1.0.8"
periodictable = "^1.6.1"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"

[tool.poetry.group.dev.dependencies]
nbstripout = "^0.6.1"
nbdime = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
